короче описание анимации и без запросов вообще и 1х1 прозрачная гифка весит меньше чем пнг

--- a/css/style.css
+++ b/css/style.css
@@ -117,16 +117,14 @@ section {
 }
 
 @keyframes brain-pulse {
-    0% {
+
+    from,
+    to {
         transform: scale(1);
     }
 
     50% {
         transform: scale(1.1);
-    }
-
-    100% {
-        transform: scale(1);
     }
 }
 
